--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeferson Venceslau Marcos</title>
+    <title>Página Pessoal de Jeferson Venceslau Marcos</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        section {
+            padding: 20px;
+            margin: 20px;
+            background-color: #fff;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+        <h1>Página Pessoal de Jeferson Venceslau Marcos</h1>
+    </header>
+    <section>
+        <h2>Sobre Mim</h2>
+        <p>Olá! Meu nome é Jeferson Venceslau Marcos e sou um profissional de tecnologia da informação. Estou apaixonado por aprender novas tecnologias e resolver problemas complexos.</p>
+    </section>
+    <footer>
+        &copy; 2024 Jeferson Venceslau Marcos - Todos os direitos reservados
+    </footer>
 </body>
 </html>
