--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <header>
-        <h1>Página Pessoal de Jeferson Venceslau Marcos</h1>
+        <h1>Jeferson Venceslau Marcos</h1>
+        <h2>Desenvolvedor e Hacker</h2>
     </header>
     <section class="about">
         <h2>Sobre Mim</h2>
-        <p>Olá! Meu nome é Jeferson Venceslau Marcos e sou um profissional de tecnologia da informação. Estou apaixonado por aprender novas tecnologias e resolver problemas complexos.</p>
+        <p>Olá! Sou Jeferson Venceslau Marcos, apaixonado por linguagens de programação como Python, Java e C#. Tenho habilidades em hacking e estou sempre buscando novos desafios. Confira meu portfólio abaixo!</p>
+    </section>
+    <section class="portfolio">
+        <h2>Portfólio</h2>
+        <ul>
+            <li><a href="#">Projeto 1</a></li>
+            <li><a href="#">Projeto 2</a></li>
+            <li><a href="#">Projeto 3</a></li>
+            <!-- Adicione mais projetos conforme necessário -->
+        </ul>
     </section>
     <footer>
         &copy; 2024 Jeferson Venceslau Marcos - Todos os direitos reservados
