--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Pessoal de Jeferson Venceslau Marcos</title>
+    <title>Jeferson Venceslau Marcos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Jeferson Venceslau Marcos</h1>
-        <h2>Desenvolvedor e Hacker</h2>
+        <h2>Desenvolvedor e Hacker em treinamento</h2>
     </header>
     <section class="about">
         <h2>Sobre Mim</h2>
