--- a/index.html
+++ b/index.html
@@ -3,29 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeferson Venceslau Marcos</title>
-    <link rel="stylesheet" href="jefersonmarcos/styles.css">
+    <title>Página Pessoal</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Jeferson Venceslau Marcos</h1>
-        <h2>Desenvolvedor e Hacker em treinamento</h2>
+        <div class="container">
+            <h1>Jeferson V. Marcos</h1>
+            <h2>Programação e Hacking</h2>
+        </div>
     </header>
-    <section class="about">
-        <h2>Sobre Mim</h2>
-        <p>Olá! Sou Jeferson Venceslau Marcos, apaixonado por linguagens de programação como Python, Java e C#. Tenho habilidades em hacking e estou sempre buscando novos desafios. Confira meu portfólio abaixo!</p>
-    </section>
-    <section class="portfolio">
-        <h2>Portfólio</h2>
-        <ul>
-            <li><a href="#">Projeto 1</a></li>
-            <li><a href="#">Projeto 2</a></li>
-            <li><a href="#">Projeto 3</a></li>
-            <!-- Adicione mais projetos conforme necessário -->
-        </ul>
-    </section>
+    <div class="container">
+        <aside>
+            <h2>Sobre Mim</h2>
+            <p>Olá! Meu nome é Jeferson Venceslau Marcos e sou apaixonado por tecnologia.</p>
+            <h2>Ao longo dos anos, desenvolvi habilidades em programação e no momento estudando 
+            hacking.
+            </h2>
+            <ul>
+                <li>Java</li>
+                <li>Python</li>
+                <li>C#</li>
+            </ul>
+        </aside>
+       
+        
+    </div>
     <footer>
-        &copy; 2024 Jeferson Venceslau Marcos - Todos os direitos reservados
+        <div class="container">
+            &copy; 2024 - Jeferson Venceslau Marcos
+        </div>
     </footer>
 </body>
 </html>
