--- a/index.html
+++ b/index.html
@@ -1,38 +1,56 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeferson V. Marcos</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Jeferson V. Marcos - Página Pessoal</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        header {
+            background-color: #007bff;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        h1, h2 {
+            margin: 10px 0;
+        }
+        section {
+            padding: 20px;
+            margin: 20px auto;
+            max-width: 800px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        footer {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Jeferson V. Marcos</h1>
-            <h2>Programação e Hacking</h2>
-        </div>
+        <h1>Jeferson V. Marcos</h1>
+        <h2>Tecnologia da Informação | Programação | Hacking</h2>
     </header>
-    <div class="container">
-        <aside>
-            <h2>Sobre Mim</h2>
-            <p>Olá! Meu nome é Jeferson Venceslau Marcos e sou apaixonado por tecnologia.</p>
-            <h2>Ao longo dos anos, desenvolvi habilidades em programação e no momento estudando 
-            hacking.
-            </h2>
-            <ul>
-                <li>Java</li>
-                <li>Python</li>
-                <li>C#</li>
-            </ul>
-        </aside>
-       
-        
-    </div>
+    <section>
+        <h2>Sobre Mim</h2>
+        <p>Olá, meu nome é Jeferson V. Marcos. Sou um entusiasta de tecnologia da informação, apaixonado por programação, especialmente em Python, C# e Java. Atualmente, estou estudando hacking para ampliar meus conhecimentos na área de segurança da informação.</p>
+    </section>
     <footer>
-        <div class="container">
-            &copy; 2024 - Jeferson Venceslau Marcos
-        </div>
+        <p>&copy; 2024 Jeferson V. Marcos - Página Pessoal</p>
     </footer>
 </body>
 </html>
