--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background-color: #007bff;
+            background-color: #171a1d;
             color: #fff;
             padding: 20px 0;
             text-align: center;
@@ -30,7 +30,7 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         footer {
-            background-color: #007bff;
+            background-color: #171a1d;
             color: #fff;
             padding: 10px 0;
             text-align: center;
