--- a/index.html
+++ b/index.html
@@ -4,41 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeferson V. Marcos - Página Pessoal</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f9fa;
-            color: #333;
-        }
-        header {
-            background-color: #171a1d;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-        }
-        h1, h2 {
-            margin: 10px 0;
-        }
-        section {
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 800px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        footer {
-            background-color: #171a1d;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -48,6 +14,11 @@
     <section>
         <h2>Sobre Mim</h2>
         <p>Olá, meu nome é Jeferson V. Marcos. Sou um entusiasta de tecnologia da informação, apaixonado por programação, especialmente em Python, C# e Java. Atualmente, estou estudando hacking para ampliar meus conhecimentos na área de segurança da informação.</p>
+        <div class="social-links">
+            <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/Jefemarcossbs" target="_blank">GitHub</a>
+            <!-- Adicione mais redes sociais conforme necessário -->
+        </div>
     </section>
     <footer>
         <p>&copy; 2024 Jeferson V. Marcos - Página Pessoal</p>
