--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeferson V. Marcos - Página Pessoal</title>
+    <title>Menu Lateral com Sobre Mim</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Jeferson V. Marcos</h1>
-        <h2>Tecnologia da Informação | Programação | Hacking</h2>
-    </header>
-    <section>
-        <h2>Sobre Mim</h2>
-        <p>Olá, meu nome é Jeferson V. Marcos. Sou um entusiasta de tecnologia da informação, apaixonado por programação, especialmente em Python, C# e Java. Atualmente, estou estudando hacking para ampliar meus conhecimentos na área de segurança da informação.</p>
-        <div class="social-links">
-            <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
-            <a href="https://github.com/Jefemarcossbs" target="_blank">GitHub</a>
-            <!-- Adicione mais redes sociais conforme necessário -->
-        </div>
-    </section>
-    <footer>
-        <p>&copy; 2024 Jeferson V. Marcos - Página Pessoal</p>
-    </footer>
+    <div class="sidebar">
+        <h2>Menu</h2>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#tutoriais">Tutoriais</a></li>
+            <li><a href="#about">Sobre Mim</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </div>
+    <div class="content">
+        <h1>Bem-vindo!</h1>
+        <!--<p>Este é um exemplo de menu lateral usando HTML e CSS.</p> -->
+        <section id="about">
+            <h2>Sobre Mim</h2>
+            <p><strong>Interesses:</strong> Olá, meu nome é Jeferson V. Marcos. 
+                Sou um entusiasta de tecnologia da informação, apaixonado por programação, 
+                especialmente em Python, C# e Java. Atualmente, estou estudando hacking para 
+                ampliar meus conhecimentos na área de segurança da informação.</p>
+        </section>
+    </div>
 </body>
 </html>
