--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#tutoriais">Tutoriais</a></li>
-            <li><a href="#about">Sobre Mim</a></li>
+            <!-- <li><a href="#about">Sobre Mim</a></li> -->
             <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
